Linux UI: Never use GTK theme for supervised profiles

The GTK+ theme should not be available to supervised users.  See
https://cs.chromium.org/chromium/src/chrome/test/data/webui/settings/appearance_page_test.js?rcl=5ecf150b73ac76e3024caae61c707bbc418c6f2a [formerly 6a23306766d02a480c7992f91b51e9691d6511b8]&l=163

BUG=694154
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2706243004
Cr-Commit-Position: refs/heads/master@{#451924}

Former-commit-id: a7b1d4e984b58061e973c31de0c7b403ec14f42c